add basic products functionality
